--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,8 @@ sonar.sources=src
 sonar.java.binaries=target
  
 # 🔐 Authentication (optional if token is injected by Jenkins)
-# sonar.login=<your_token>   ← avoid hardcoding in real-time
+ sonar.login=sqa_43a7889a8af5d37dd38a4d051c6c8161044bfa8
+#   ← avoid hardcoding in real-time
  
 # 🌐 SonarQube server URL (optional if Jenkins injects it)
 # sonar.host.url=http://localhost:9000
