--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,9 @@ sonar.java.binaries=target
 #   ← avoid hardcoding in real-time
  
 # 🌐 SonarQube server URL (optional if Jenkins injects it)
-# sonar.host.url=http://localhost:9000
+
+sonar.host.url=https://turbo-chainsaw-466w64qxqrphq6gx-9000.app.github.dev
+
  
 # 🛑 Optional exclusions (e.g. test files, configs)
 # sonar.exclusions=**/test/**,**/config/**
