added src of the project

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,16 +4,16 @@ sonar.projectName=Java Maven Demo App
 sonar.projectVersion=1.0
  
 # 📂 Source & Binary Paths
-sonar.sources=src
-sonar.java.binaries=target
+sonar.sources=demo-app/src
+sonar.java.binaries=demo-app/target
  
 # 🔐 Authentication (optional if token is injected by Jenkins)
- sonar.login=sqa_43a7889a8af5d37dd38a4d051c6c8161044bfa8
+ sonar.login=sqa_43a7889a8af5d37dd38a4d051c6c8161044bfa8d
 #   ← avoid hardcoding in real-time
  
 # 🌐 SonarQube server URL (optional if Jenkins injects it)
 
-sonar.host.url=https://turbo-chainsaw-466w64qxqrphq6gx-9000.app.github.dev
+sonar.host.url=http://localhost:9000
 
  
 # 🛑 Optional exclusions (e.g. test files, configs)
