--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.sources=demo-app/src
 sonar.java.binaries=demo-app/target
  
 # 🔐 Authentication (optional if token is injected by Jenkins)
- sonar.login=sqa_43a7889a8af5d37dd38a4d051c6c8161044bfa8d
+ #sonar.login=sqa_ab21582b16ee5a11f256b8b9211d3918f438e027
 #   ← avoid hardcoding in real-time
  
 # 🌐 SonarQube server URL (optional if Jenkins injects it)
