--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,22 +31,22 @@
 # ✅ STEP 2: docker-compose.yml (Clean and Stable Version)
 # --------------------------------------------------
  
+    
 version: '3.8'
- 
+
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk11
+    build:
+      context: .
+      dockerfile: Dockerfile.jenkins
     container_name: jenkins
     user: root
     ports:
-    - "8080:8080"
-    - "50000:50000"
+      - "8080:8080"
+      - "50000:50000"
     volumes:
-    - ./jenkins_home:/var/jenkins_home
-    - /var/run/docker.sock:/var/run/docker.sock
-    - /workspaces/fulldevops/sonar-scanner:/opt/sonar-scanner
-    environment:
-    - PATH=/opt/sonar-scanner/bin:$PATH
+      - ./jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
 
   sonarqube:
@@ -61,7 +61,7 @@ services:
       - ./sonar_extensions:/opt/sonarqube/extensions
     restart: always
     mem_limit: 2g
- 
+
 #  artifactory:
 #    image: docker.io/jfrog/artifactory-oss:7.49.12
 #    container_name: artifactory
