--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.sources=demo-app/src
 sonar.java.binaries=demo-app/target
  
 # 🔐 Authentication (optional if token is injected by Jenkins)
- #sonar.login=sqa_ab21582b16ee5a11f256b8b9211d3918f438e027
+ sonar.login=sqa_ab21582b16ee5a11f256b8b9211d3918f438e027
 #   ← avoid hardcoding in real-time
  
 # 🌐 SonarQube server URL (optional if Jenkins injects it)
