--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # 🔍 SonarQube project identity
-sonar.projectKey=java-maven-app
-sonar.projectName=Java Maven Demo App
+sonar.projectKey=fulldevops
+sonar.projectName=Full  Devops Project
 sonar.projectVersion=1.0
  
 # 📂 Source & Binary Paths
 sonar.sources=demo-app/src
-sonar.java.binaries=demo-app/target
+sonar.java.binaries=demo-app/target/classes
  
 # 🔐 Authentication (optional if token is injected by Jenkins)
  sonar.login=sqa_ab21582b16ee5a11f256b8b9211d3918f438e027
