added docker build and push to jenkines file

--- a/demo-app/pom.xml
+++ b/demo-app/pom.xml
@@ -15,4 +15,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <repository>
+        <id>jfrog-repo</id>
+        <url>https://heena98.jfrog.io/artifactory/libs-release-local</url>
+    </repository>
+</distributionManagement>
+
 </project>
