--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,13 +2,17 @@ FROM jenkins/jenkins:lts-jdk11
 
 USER root
 
-# Install SonarScanner
-RUN apt-get update && apt-get install -y unzip wget && \
+# Install Docker CLI and SonarScanner
+RUN apt-get update && \
+    apt-get install -y unzip wget docker.io && \
     wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip && \
     unzip sonar-scanner-cli-5.0.1.3006-linux.zip && \
     mv sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner && \
     ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner && \
     rm sonar-scanner-cli-5.0.1.3006-linux.zip
+
+# Add Jenkins user to Docker group
+RUN usermod -aG docker jenkins
 
 ENV PATH="/opt/sonar-scanner/bin:$PATH"
 
