--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - ./jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - ./demo-app:/var/jenkins_home/workspace/demo-app
+      - ./docker_config/config.json:/root/.docker/config.json
+      
     restart: always
     networks:
       - devops-net
