--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,22 +2,16 @@
 sonar.projectKey=fulldevops
 sonar.projectName=Full Devops Project
 sonar.projectVersion=1.0
- 
+
 # 📂 Source & Binary Paths
 sonar.sources=demo-app/src
 sonar.java.binaries=demo-app/target/classes
- 
-# 🔐 Authentication (optional if token is injected by Jenkins)
- sonar.login=sqp_67860f97c6e514f73044799c89c74cc17d904b8e
-#   ← avoid hardcoding in real-time
- 
-# 🌐 SonarQube server URL (optional if Jenkins injects it)
 
-sonar.host.url=http://localhost:9000
+# 🔐 Authentication (omit if injected by Jenkins)
+# sonar.token=your-token (handled by Jenkins)
 
- 
-# 🛑 Optional exclusions (e.g. test files, configs)
-# sonar.exclusions=**/test/**,**/config/**
- 
-# 🧪 Coverage report location (if using JaCoCo later)
-# sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+# 🌐 SonarQube server URL (omit if injected by Jenkins)
+# sonar.host.url=http://localhost:9000
+
+# 🧪 Coverage report location
+sonar.coverage.jacoco.xmlReportPaths=demo-app/target/site/jacoco/jacoco.xml
