--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,8 @@ sonar.projectVersion=1.0
 # 📂 Source & Binary Paths
 sonar.sources=demo-app/src
 sonar.java.binaries=demo-app/target/classes
+sonar.java.libraries=demo-app/target/dependency/*.jar
+
 
 # 🔐 Authentication (omit if injected by Jenkins)
 # sonar.token=your-token (handled by Jenkins)
