--- a/demo-app/sonar-project.properties
+++ b/demo-app/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=Full Devops Project
 sonar.projectVersion=1.0
 
 # 📂 Source & Binary Paths
-sonar.sources=demo-app/src
+sonar.sources=src
 sonar.java.binaries=demo-app/target/classes
 sonar.java.libraries=demo-app/target/dependency/*.jar
 
