added kubectl tothe jenkins

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./demo-app:/var/jenkins_home/workspace/demo-app
       - ./docker_config/config.json:/root/.docker/config.json
+      - ~/.kube/config:/var/jenkins_home/.kube/config  
       
     restart: always
     networks:
