--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -2,17 +2,24 @@ FROM jenkins/jenkins:lts-jdk11
 
 USER root
 
-# Install Docker CLI, SonarScanner, and kubectl
+# Install Docker CLI, SonarScanner, kubectl, and AWS CLI
 RUN apt-get update && \
-    apt-get install -y unzip wget curl docker.io && \
+    apt-get install -y unzip wget curl docker.io zip less groff && \
+    # Install SonarScanner
     wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip && \
     unzip sonar-scanner-cli-5.0.1.3006-linux.zip && \
     mv sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner && \
     ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner && \
     rm sonar-scanner-cli-5.0.1.3006-linux.zip && \
+    # Install kubectl
     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
     chmod +x kubectl && \
-    mv kubectl /usr/local/bin/
+    mv kubectl /usr/local/bin/ && \
+    # Install AWS CLI v2
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install && \
+    rm -rf awscliv2.zip aws
 
 # Add Jenkins user to Docker group
 RUN usermod -aG docker jenkins
