--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -19,7 +19,9 @@ RUN apt-get update && \
     curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
     ./aws/install && \
-    rm -rf awscliv2.zip aws
+    rm -rf awscliv2.zip aws && \
+    # ✅ Force DNS resolution to use Google DNS
+    echo "nameserver 8.8.8.8" > /etc/resolv.conf
 
 # Add Jenkins user to Docker group
 RUN usermod -aG docker jenkins
