added maven analysis with sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,9 @@ sonar.projectName=Full Devops Project
 sonar.projectVersion=1.0
 
 # 📂 Source & Binary Paths
-sonar.sources=src
-sonar.java.binaries=target/classes
-sonar.java.libraries=target/dependency/*.jar
+sonar.sources=demo-app/src
+sonar.java.binaries=demo-app/target/classes
+sonar.java.libraries=demo-app/target/dependency/*.jar
 
 
 # 🔐 Authentication (omit if injected by Jenkins)
@@ -16,4 +16,4 @@ sonar.java.libraries=target/dependency/*.jar
 # sonar.host.url=http://localhost:9000
 
 # 🧪 Coverage report location
-sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=demo-app/target/site/jacoco/jacoco.xml
