--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       automountServiceAccountToken: false
       containers:
       - name: java-app
-        image: heenak98.jfrog.io/docker-devops/java-devops-app:4.0
+        image: heenak.jfrog.io/docker-devops/java-devops-app:4.0
         ports:
         - containerPort: 8081
       imagePullSecrets:
