--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,6 @@
 # --------------------------------------------------
 # ✅ STEP 2: docker-compose.yml (Clean and Stable Version)
 # --------------------------------------------------
- 
     
 version: '3.8'
 
@@ -74,11 +73,35 @@ services:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     volumes:
       - ./sonar_data:/opt/sonarqube/data
-      - ./sonar_extensions:/opt/sonarqube/extensions
+      - ./sonar_extensions/plugins:/opt/sonarqube/extensions/plugins
     restart: always
     mem_limit: 2g
     networks:
       - devops-net
+
+  prometheus:
+   image: prom/prometheus:v2.51.2
+   container_name: prometheus
+   ports:
+     - "9090:9090"
+   volumes:
+     - ./prometheus.yml:/etc/prometheus/prometheus.yml
+   restart: always
+   networks:
+      - devops-net
+ 
+  grafana:
+   image: grafana/grafana:10.2.3
+   container_name: grafana
+   ports:
+     - "3000:3000"
+   volumes:
+     - grafana_data:/var/lib/grafana
+   restart: always
+ 
+volumes:
+  grafana_data:
+  kubeconfig_data:
 
 #  artifactory:
 #    image: docker.io/jfrog/artifactory-oss:7.49.12
@@ -89,29 +112,6 @@ services:
 #    - ./artifactory_data:/var/opt/jfrog/artifactory
 #    - ./system.yaml:/var/opt/jfrog/artifactory/etc/system.yaml:ro
 #    restart: always
-
-
-#  prometheus:
-#   image: prom/prometheus:v2.51.2
-#   container_name: prometheus
-#   ports:
-#     - "9090:9090"
-#   volumes:
-#     - ./prometheus.yml:/etc/prometheus/prometheus.yml
-#   restart: always
- 
-# grafana:
-#   image: grafana/grafana:10.2.3
-#   container_name: grafana
-#   ports:
-#     - "3000:3000"
-#   volumes:
-#     - grafana_data:/var/lib/grafana
-#   restart: always
- 
-volumes:
-# grafana_data:
-  kubeconfig_data:
 
  
 # --------------------------------------------------
