--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,13 +4,13 @@ global:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
  
   - job_name: 'jenkins'
     metrics_path: '/prometheus'
     static_configs:
-      - targets: ['host.docker.internal:8080']
+      - targets: ['jenkins:8080']
  
   - job_name: 'sonarqube'
     static_configs:
-      - targets: ['host.docker.internal:9000']
+      - targets: ['sonarqube:9000']
